<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linear_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:hint="@string/teacher_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:enabled="false"
            android:hint="@string/session_id"
            android:inputType="number" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_use_session"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/use_session_id"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_id" />

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_use_session">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:hint="@string/user_name"
            android:inputType="text" />

        <Button
            android:id="@+id/button_insert_shy"
            style="@style/Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_insert_shy"
            android:textAllCaps="false" />

    </LinearLayout>

    <Button
        android:id="@+id/button_proceed"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:text="@string/button_proceed"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/layout_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_bot_menu"
            style="@style/Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_bot_menu"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_brute_menu"
            style="@style/Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_brute_menu"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>