<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".activity.UnhandledExceptionActivity">

    <TextView
        android:id="@+id/text_thread_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_thread_id"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_thread_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_thread_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_thread_id" />

    <TextView
        android:id="@+id/text_throwable_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_throwable_message"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_thread_name" />

    <ScrollView
        android:id="@+id/scroll_stacktrace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"

        app:layout_constraintBottom_toTopOf="@id/divider_unhandled_exception"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_throwable_message">

        <TextView
            android:id="@+id/text_stacktrace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_stacktrace" />

    </ScrollView>

    <View
        android:id="@+id/divider_unhandled_exception"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"

        app:layout_constraintBottom_toTopOf="@id/button_close_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_close_application"
        style="@style/Button.Borderless.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_close_application"
        android:textAllCaps="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>